--- a/pom.xml
+++ b/pom.xml
@@ -67,5 +67,11 @@
       <version>1.82</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.9</version>
+    </dependency>
+
   </dependencies>
 </project>
