--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,14 @@
       <version>2.16.1</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.codehaus.plexus/plexus-utils -->
+    <dependency>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-utils</artifactId>
+      <version>3.5.1</version>
+    </dependency>
+
+
 
     <dependency>
       <groupId>com.google.code.gson</groupId>
