--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,12 @@
       <version>3.5.1</version>
     </dependency>
 
-
+    <!-- https://mvnrepository.com/artifact/com.jcraft/jsch -->
+    <dependency>
+      <groupId>com.jcraft</groupId>
+      <artifactId>jsch</artifactId>
+      <version>0.1.55</version>
+    </dependency>
 
     <dependency>
       <groupId>com.google.code.gson</groupId>
