adding docker environment variables

--- a/src/main/java/docker/dockerCompose/volume_Mapping_dc_01/docker-compose.yaml
+++ b/src/main/java/docker/dockerCompose/volume_Mapping_dc_01/docker-compose.yaml
@@ -1,3 +1,4 @@
+# - over here we are trying to create 2 container (nginx-container & alpine-container) and we will be demonstrating the volume mapping by downloading the content and putting git into out local.
 version: "3"
 services:
   nginx-container:
