--- a/src/main/java/docker/practical_examples/selenium_grid/docker-compose.yaml
+++ b/src/main/java/docker/practical_examples/selenium_grid/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
       - 4444:4444
   chrome-service:
     image: seleniarm/node-chromium:4.20
+    shm_size: '2g'
     depends_on:
       - selenium-grid-service
     environment:
@@ -14,6 +15,7 @@ services:
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
   firefox-service:
     image: seleniarm/node-firefox:4.20
+    shm_size: '2g'
     depends_on:
       - selenium-grid-service
     environment:
