--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,13 @@
       <version>3.11.1</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.zaxxer/HikariCP -->
+    <dependency>
+      <groupId>com.zaxxer</groupId>
+      <artifactId>HikariCP</artifactId>
+      <version>5.1.0</version>
+    </dependency>
+
 
   </dependencies>
     <build>
