--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,12 @@
       <version>5.1.0</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
+    <dependency>
+      <groupId>org.apache.kafka</groupId>
+      <artifactId>kafka-clients</artifactId>
+      <version>3.8.1</version>
+    </dependency>
 
   </dependencies>
     <build>
