--- a/src/main/java/kafka/kafkaThroughDocker/docker-compose.yaml
+++ b/src/main/java/kafka/kafkaThroughDocker/docker-compose.yaml
@@ -1,4 +1,3 @@
-
 services:
   zookeeper-service:
     image: zookeeper:3.9.3-jre-17
@@ -11,23 +10,23 @@ services:
     container_name: kafka-container
     ports:
       - "9092:9092"
+      - "29092:29092"  # Expose Kafka for external access
     environment:
       KAFKA_CFG_ZOOKEEPER_CONNECT: zookeeper-service:2181
-      KAFKA_CFG_LISTENERS: PLAINTEXT://:9092
-      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka-service:9092
-      KAFKA_CFG_BROKER_ID: 1
+      KAFKA_CFG_LISTENERS: PLAINTEXT://0.0.0.0:9092,PLAINTEXT_HOST://0.0.0.0:29092
+      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka-service:9092,PLAINTEXT_HOST://localhost:29092
+      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_CFG_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       ALLOW_PLAINTEXT_LISTENER: "yes"
     depends_on:
       - zookeeper-service
 
   kafka-ui-service:
-    image: provectuslabs/kafka-ui:latest
-    container_name: kafka-ui-container
+    image: obsidiandynamics/kafdrop:latest
+    container_name: kafdrop-container
     ports:
-      - "8080:8080"
+      - "9000:9000"
     environment:
-      KAFKA_CLUSTERS_0_NAME: local-cluster
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka-service:9092
-      KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper-service:2181
+      KAFKA_BROKERCONNECT: kafka-service:9092
     depends_on:
-     - kafka-service
+      - kafka-service
