--- a/src/main/java/kafka/p01_kafkaThroughDocker/docker-compose.yaml
+++ b/src/main/java/kafka/p01_kafkaThroughDocker/docker-compose.yaml
@@ -22,11 +22,12 @@ services:
       - zookeeper-service
 
   kafka-ui-service:
-    image: obsidiandynamics/kafdrop:latest
-    container_name: kafdrop-container
+    image: provectuslabs/kafka-ui:latest
+    container_name: kafka-ui-container
     ports:
-      - "9000:9000"
+      - "9000:8080"
     environment:
-      KAFKA_BROKERCONNECT: kafka-service:9092
+      KAFKA_CLUSTERS_0_NAME: local-cluster
+      KAFKA_CLUSTERS_0_BOOTSTRAP_SERVERS: kafka-service:9092
     depends_on:
       - kafka-service
