--- a/src/main/java/CI_CD/jenkins/p01_simpleJenkinsFile_pipeline/Jenkinsfile
+++ b/src/main/java/CI_CD/jenkins/p01_simpleJenkinsFile_pipeline/Jenkinsfile
@@ -7,9 +7,9 @@ pipeline{
                 deleteDir()
             }
         }
-        stage("Stage 2: Cloning the got repo"){
+        stage("Stage 2: Cloning the git repo"){
             steps{
-                sh "git clone https://github.com/jenkins-docs/simple-java-maven-app.git"
+                sh "git clone https://github.com/beneite/simple-java-maven-app.git"
             }
         }
         stage("Stage 3: Building the Java Project"){
