--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,13 @@
       <version>3.8.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.github.javafaker</groupId>
+      <artifactId>javafaker</artifactId>
+      <version>1.0.2</version>
+    </dependency>
+
+
   </dependencies>
     <build>
         <plugins>
